option java_package = "com.clarkparsia.pellet.service.proto";

option java_outer_classname = "Messages";

option optimize_for = SPEED;

message OwlObject {
	required bytes bytes = 1;
}

message QueryRequest {
	required OwlObject input = 1;
}

message ExplainRequest {
	required OwlObject axiom = 1;
}

message AxiomSet {
	repeated OwlObject axioms = 1;
}

message UpdateRequest {
	required AxiomSet additions = 1;
	required AxiomSet removals = 2;
}

message Node {
	repeated OwlObject owl_object = 1;
}

message NodeSet {
	repeated Node nodes = 1;
}

message QueryResponse {
	required NodeSet result = 1;
}

message ExplainResponse {
	repeated AxiomSet axiomsets = 1;
}